--- a/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/CardProcessingApi.Web.csproj
+++ b/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/CardProcessingApi.Web.csproj
@@ -284,7 +284,7 @@
     <Compile Include="Models\CommonViewModels.cs" />
     <Compile Include="Models\ConfigurationModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\MerchantBindingModels.cs" />
+    <Compile Include="Models\MerchantBindingModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
