--- a/Source Code/C#/Client Form/FC-MST/FC-MST/FC-MST.csproj
+++ b/Source Code/C#/Client Form/FC-MST/FC-MST/FC-MST.csproj
@@ -12,6 +12,8 @@
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -66,6 +68,24 @@
     <Compile Include="DistrictComboBox.Designer.cs">
       <DependentUpon>DistrictComboBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmViewDetailMerchant.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmViewDetailMerchant.Designer.cs">
+      <DependentUpon>frmViewDetailMerchant.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmXemMerchantTheoView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmXemMerchantTheoView.Designer.cs">
+      <DependentUpon>frmXemMerchantTheoView.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainAppForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,11 +112,23 @@
     <Compile Include="UCAgentManagement.Designer.cs">
       <DependentUpon>UCAgentManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="XtraFormMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="XtraFormMain.Designer.cs">
+      <DependentUpon>XtraFormMain.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddNewAgent.resx">
       <DependentUpon>AddNewAgent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DistrictComboBox.resx">
       <DependentUpon>DistrictComboBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmViewDetailMerchant.resx">
+      <DependentUpon>frmViewDetailMerchant.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmXemMerchantTheoView.resx">
+      <DependentUpon>frmXemMerchantTheoView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainAppForm.resx">
       <DependentUpon>MainAppForm.cs</DependentUpon>
@@ -118,6 +150,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UCAgentManagement.resx">
       <DependentUpon>UCAgentManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="XtraFormMain.resx">
+      <DependentUpon>XtraFormMain.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -146,6 +181,13 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
