--- a/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/CardProcessingApi.Web.csproj
+++ b/Source Code/C#/CardProcessingApi/CardProcessingApi.Web/CardProcessingApi.Web.csproj
@@ -269,6 +269,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MerchantController.cs" />
     <Compile Include="Framework\DependencyRegister.cs" />
+    <Compile Include="Framework\Extension\MappingExtension.cs" />
     <Compile Include="Framework\Extension\ModelStateDictionaryExtensions.cs" />
     <Compile Include="Framework\Filters\RoleAuthorizeAttribute.cs" />
     <Compile Include="Framework\Integration\CommonServiceLocatorIntegration.cs" />
@@ -281,8 +282,10 @@
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AgentBindingModels.cs" />
+    <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\CommonViewModels.cs" />
     <Compile Include="Models\ConfigurationModels.cs" />
+    <Compile Include="Models\GeneralModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\MerchantBindingModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
