--- a/Source Code/C#/CardProcessingApi/CardProcessingApi.Core/CardProcessingApi.Core.csproj
+++ b/Source Code/C#/CardProcessingApi/CardProcessingApi.Core/CardProcessingApi.Core.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search\AgentSearchCriteria.cs" />
     <Compile Include="Search\BaseSearchCriteria.cs" />
+    <Compile Include="Search\MerchantSearchCriteria.cs" />
     <Compile Include="WorkingUser.cs" />
   </ItemGroup>
   <ItemGroup>
